--- a/src/vehicle_msgs/svea_msgs/CMakeLists.txt
+++ b/src/vehicle_msgs/svea_msgs/CMakeLists.txt
@@ -56,6 +56,7 @@ find_package(catkin REQUIRED COMPONENTS
    lli_encoder.msg
    lli_emergency.msg
    VehicleState.msg
+   emergency_break.msg
  )
 
 ## Generate services in the 'srv' folder
