Added rosserial dependencies

--- a/src/svea_core/package.xml
+++ b/src/svea_core/package.xml
@@ -53,22 +53,28 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>robot_localization</build_depend>
   <build_depend>mrpt_map</build_depend>
   <build_depend>svea_msgs</build_depend>
   <build_depend>rostest</build_depend>
+  <build_depend>rosserial_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>svea_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>robot_localization</exec_depend>
-  <exec_depend>mrpt_map</exec_depend>
   <exec_depend>svea_msgs</exec_depend>
-
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>rosserial_python</exec_depend>
+  <exec_depend>rosserial_server</exec_depend>
+  <exec_depend>rosserial_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
