Add hector_mapping dependency

--- a/src/svea_core/package.xml
+++ b/src/svea_core/package.xml
@@ -76,6 +76,8 @@
   <exec_depend>rosserial_python</exec_depend>
   <exec_depend>rosserial_server</exec_depend>
   <exec_depend>rosserial_msgs</exec_depend>
+  <exec_depend>rosserial_msgs</exec_depend>
+  <exec_depend>hector_mapping</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
