--- a/src/svea_core/launch/costmap_params_sim.yaml
+++ b/src/svea_core/launch/costmap_params_sim.yaml
@@ -25,17 +25,17 @@ resolution: 0.05
 #mark_threshold: 0
 ##END VOXEL STUFF
 #
-transform_tolerance: 0.3
-#obstacle_range: 2.5
+transform_tolerance: 0.8
+obstacle_range: 7.0
 #max_obstacle_height: 2.0
-#raytrace_range: 3.0
+raytrace_range: 15.0
 #footprint: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]]
-##robot_radius: 0.46
+robot_radius: 0.1
 #footprint_padding: 0.01
 inflation_radius: 0.01
 #cost_scaling_factor: 10.0
 #lethal_cost_threshold: 100
 observation_sources: laser_scan_sensor
-laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.020, topic: scan,
+laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.1, topic: scan,
   observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08}
 #
