Improve simulation costmap

--- a/src/svea_core/launch/costmap_params_sim.yaml
+++ b/src/svea_core/launch/costmap_params_sim.yaml
@@ -4,16 +4,16 @@ update_frequency: 5.0
 publish_frequency: 1.0
 
 #set if you want the voxel map published
-#publish_voxel_map: true
+# publish_voxel_map: false
 #
 ##set to true if you want to initialize the costmap from a static map
-#static_map: false
+static_map: true
 #
 ##begin - COMMENT these lines if you set static_map to true
 #rolling_window: true
-width: 43.90
-height: 9.0
-resolution: 0.05
+# width: 43.80
+# height: 8.50
+# resolution: 0.05
 ##end - COMMENT these lines if you set static_map to true
 #
 ##START VOXEL STUFF
@@ -28,11 +28,11 @@ resolution: 0.05
 transform_tolerance: 0.8
 obstacle_range: 7.0
 #max_obstacle_height: 2.0
-raytrace_range: 15.0
+raytrace_range: 7.0
 #footprint: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]]
 robot_radius: 0.1
 #footprint_padding: 0.01
-inflation_radius: 0.01
+inflation_radius: 0.05
 #cost_scaling_factor: 10.0
 #lethal_cost_threshold: 100
 observation_sources: laser_scan_sensor
