--- a/src/svea_core/launch/costmap_params.yaml
+++ b/src/svea_core/launch/costmap_params.yaml
@@ -7,13 +7,13 @@ publish_frequency: 1.0
 #publish_voxel_map: true
 #
 ##set to true if you want to initialize the costmap from a static map
-#static_map: false
+static_map: true
 #
 ##begin - COMMENT these lines if you set static_map to true
 #rolling_window: true
-width: 43.90
-height: 9.0
-resolution: 0.05
+# width: 43.90
+# height: 9.0
+# resolution: 0.05
 ##end - COMMENT these lines if you set static_map to true
 #
 ##START VOXEL STUFF
@@ -26,16 +26,16 @@ resolution: 0.05
 ##END VOXEL STUFF
 #
 transform_tolerance: 0.3
-#obstacle_range: 2.5
+obstacle_range: 2.5
 #max_obstacle_height: 2.0
-#raytrace_range: 3.0
+raytrace_range: 3.0
 #footprint: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]]
-##robot_radius: 0.46
+robot_radius: 0.1
 #footprint_padding: 0.01
-inflation_radius: 0.01
+inflation_radius: 0.02
 #cost_scaling_factor: 10.0
 #lethal_cost_threshold: 100
 observation_sources: laser_scan_sensor
-laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.020, topic: scan,
+laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.025, topic: scan,
   observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08}
 #
