Added parameters to force global amcl localization off

--- a/src/svea_sensors/params/amcl/localize.yaml
+++ b/src/svea_sensors/params/amcl/localize.yaml
@@ -18,17 +18,20 @@ initial_cov_xx: 2.0
 initial_cov_yy: 2.0
 initial_cov_aa: 1.0
     
-odom_alpha1: 0.1 # Rot from rot
-odom_alpha2: 0.1 # Rot from trans
-odom_alpha3: 0.4  # Trans from trans
-odom_alpha4: 0.2  # Trans from rot
-odom_alpha5: 0.2 # Side slipp
+odom_alpha1: 0.05 # Rot from rot
+odom_alpha2: 0.05 # Rot from trans
+odom_alpha3: 0.2  # Trans from trans
+odom_alpha4: 0.1  # Trans from rot
+odom_alpha5: 0.1 # Side slipp
     
 laser_model_type: likelihood_field
-laser_sigma_hit: 0.04
+laser_sigma_hit: 0.08
 laser_z_hit: 0.8
 laser_z_rand: 0.2
 laser_z_short: 0.05
 laser_z_max: 0.05
 laser_lambda_short: 0.2
 laser_likelihood_max_dist: 2.0
+
+recovery_alpha_slow: 0.0
+revovery_alpha_fast: 0.0
