--- a/src/svea_core/launch/costmap_params_sim.yaml
+++ b/src/svea_core/launch/costmap_params_sim.yaml
@@ -2,20 +2,19 @@ global_frame: map
 robot_base_frame: base_link
 update_frequency: 5.0
 publish_frequency: 2.0
-# map_update_rate: 1.0
+map_update_rate: 2.0
 
 #set if you want the voxel map published
 # publish_voxel_map: false
 ##set to true if you want to initialize the costmap from a static map
-static_map: true
+# static_map: true
 #
 ##begin - COMMENT these lines if you set static_map to true
 # rolling_window: true
-# width: 6.0
-# height: 6.0
+# width: 5.0
+# height: 5.0
 # resolution: 0.05
-# width: 43.80
-# height: 8.50
+# always_send_full_costmap: false
 ##end - COMMENT these lines if you set static_map to true
 #
 ##START VOXEL STUFF
@@ -28,14 +27,14 @@ static_map: true
 ##END VOXEL STUFF
 #
 transform_tolerance: 0.3
-obstacle_range: 2.0
+obstacle_range: 5.0
 #max_obstacle_height: 2.0
-raytrace_range: 2.5
-#footprint: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]]
+raytrace_range: 5.5
+# footprint: [0.0, 0.0]
 robot_radius: 0.1
 #footprint_padding: 0.01
 inflation_radius: 0.10
-cost_scaling_factor: 10.0
+cost_scaling_factor: 0.1
 lethal_cost_threshold: 100
 observation_sources: laser_scan_sensor
 laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.1, topic: scan,
