--- a/src/svea_core/launch/costmap_params_sim.yaml
+++ b/src/svea_core/launch/costmap_params_sim.yaml
@@ -1,8 +1,8 @@
 global_frame: map
 robot_base_frame: base_link
 update_frequency: 5.0
-publish_frequency: 2.0
-map_update_rate: 2.0
+publish_frequency: 5.0
+map_update_rate: 5.0
 
 #set if you want the voxel map published
 # publish_voxel_map: false
@@ -10,10 +10,10 @@ map_update_rate: 2.0
 # static_map: true
 #
 ##begin - COMMENT these lines if you set static_map to true
-# rolling_window: true
-# width: 5.0
-# height: 5.0
-# resolution: 0.05
+rolling_window: true
+width: 4.0
+height: 4.0
+resolution: 0.05
 # always_send_full_costmap: false
 ##end - COMMENT these lines if you set static_map to true
 #
@@ -27,14 +27,14 @@ map_update_rate: 2.0
 ##END VOXEL STUFF
 #
 transform_tolerance: 0.3
-obstacle_range: 5.0
+obstacle_range: 4.0
 #max_obstacle_height: 2.0
-raytrace_range: 5.5
+raytrace_range: 4.0
 # footprint: [0.0, 0.0]
-robot_radius: 0.1
+robot_radius: 0.01
 #footprint_padding: 0.01
-inflation_radius: 0.10
-cost_scaling_factor: 0.1
+inflation_radius: 0.40
+cost_scaling_factor: 6.0
 lethal_cost_threshold: 100
 observation_sources: laser_scan_sensor
 laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.1, topic: scan,
