--- a/src/svea_core/launch/costmap_params_sim.yaml
+++ b/src/svea_core/launch/costmap_params_sim.yaml
@@ -7,13 +7,13 @@ map_update_rate: 5.0
 #set if you want the voxel map published
 # publish_voxel_map: false
 ##set to true if you want to initialize the costmap from a static map
-static_map: true
+# static_map: true
 #
 ##begin - COMMENT these lines if you set static_map to true
-#rolling_window: true
-#width: 4.0
-#height: 4.0
-#resolution: 0.05
+rolling_window: true
+width: 4.0
+height: 4.0
+resolution: 0.05
 # always_send_full_costmap: false
 ##end - COMMENT these lines if you set static_map to true
 #
