--- a/src/svea_core/package.xml
+++ b/src/svea_core/package.xml
@@ -79,6 +79,7 @@
   <exec_depend>rosserial_msgs</exec_depend>
   <exec_depend>hector_mapping</exec_depend>
   <exec_depend>costmap_2d</exec_depend>
+  <exec_depend>laser_filters</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
