--- a/src/svea_core/resources/params/race_track.yaml
+++ b/src/svea_core/resources/params/race_track.yaml
@@ -141,6 +141,13 @@ stay_in:
 - - -6.789384365081787
   - -0.16967664659023285
 
+obstacles: 
+  - [[14,-1],[14,-2]]
+  - [[15,-1],[15,0]]
+  - [[16,0.5],[16,-1]]
+  - [[18.2,-0.8],[18.2,-1.2]]
+  - [[19.5,2],[20,22]]
+  - [[19.5,2.5],[20,22]]
 start_pt:
   - 0.0
   - 0.0
