--- a/src/svea_core/launch/costmap_params.yaml
+++ b/src/svea_core/launch/costmap_params.yaml
@@ -1,7 +1,8 @@
 global_frame: map
 robot_base_frame: base_link
-update_frequency: 10.0
+update_frequency: 2.0
 publish_frequency: 2.0
+map_update_frequency: 2.0
 
 #set if you want the voxel map published
 #publish_voxel_map: true
@@ -26,16 +27,16 @@ static_map: true
 ##END VOXEL STUFF
 #
 transform_tolerance: 0.4
-obstacle_range: 3.0
+obstacle_range: 2.0
 #max_obstacle_height: 2.0
-raytrace_range: 3.5
+raytrace_range: 2.0
 #footprint: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]]
 robot_radius: 0.1
 #footprint_padding: 0.01
-inflation_radius: 0.02
-#cost_scaling_factor: 10.0
-#lethal_cost_threshold: 100
+inflation_radius: 0.10
+cost_scaling_factor: 8.0
+lethal_cost_threshold: 100
 observation_sources: laser_scan_sensor
-laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.025, topic: scan,
-  observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08}
+laser_scan_sensor: {sensor: laser, data_type: LaserScan, expected_update_rate: 0.025, topic: scan_filtered,
+  observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.3, min_obstacle_height: 0.08}
 #
