--- a/src/svea_core/launch/laser_filter_params.yaml
+++ b/src/svea_core/launch/laser_filter_params.yaml
@@ -2,5 +2,7 @@ scan_filter_chain:
 - name: angle
   type: laser_filters/LaserScanAngularBoundsFilter
   params:
-    lower_angle: -0.785
-    upper_angle: 0.785
+    # lower_angle: -0.785 # ~45 deg
+    # upper_angle: 0.785
+    lower_angle: -0.52 # ~30 deg
+    upper_angle: 0.52
