--- a/src/svea_core/src/svea/path_planners/mpc_planner.yaml
+++ b/src/svea_core/src/svea/path_planners/mpc_planner.yaml
@@ -7,14 +7,14 @@ angle_tolerance: deg(30) # Minimum angle error to consider that the planner has 
 
 speed_min: -2 #-2 Minimum speed (in meters/seconds)
 speed_max: 2 #2 Maximum speed (in meters/seconds)
-steering_angle_min: -2 #-2 # (-pi / 4) Minimum angular speed (in radians/seconds)
-steering_angle_max: 2 #2 # (pi / 4) Maximum angular speed (in radians/seconds)
+steering_angle_min: -2  # Minimum angular speed (in radians/seconds)
+steering_angle_max: 2 # Maximum angular speed (in radians/seconds)
 
 publish_frequency: 10 # ROS path publish frequency (in Hz)
 path_frame: 'map' # ROS frame where to publish the path
 
 # MPC parameters
-N: 10 #7 #20 # Prediction horizon (in steps)
+N: 10 # Prediction horizon (in steps)
 R_speed: 1. # Weight on the speed (input)
 R_steering_angle: 1. # Weight on the steering_angle (input)
 kappa: 1. # Weight on the total time
