--- a/src/av09_msgs/CMakeLists.txt
+++ b/src/av09_msgs/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(av09)
+project(av09_msgs)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,9 +8,10 @@ project(av09)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  message_generation
+
   rospy
   std_msgs
-  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -48,11 +49,12 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
  add_message_files(
-#FILES
-#action.msg
-#ctcorr.msg
-#diag.msg
-#symp.msg
+   FILES
+action.msg
+ctcorr.msg
+diag.msg
+symp.msg
+signals.msg
  )
 
 ## Generate services in the 'srv' folder
@@ -70,10 +72,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
+ generate_messages(
    DEPENDENCIES
    std_msgs
-)
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -106,8 +108,8 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES av09
-#  CATKIN_DEPENDS rospy std_msgs
+#  LIBRARIES av09_msgs
+#  CATKIN_DEPENDS message_generation message_runtime rospy std_msgs
 #  DEPENDS system_lib
 CATKIN_DEPENDS message_runtime
 )
@@ -125,7 +127,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/av09.cpp
+#   src/${PROJECT_NAME}/av09_msgs.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -136,7 +138,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/av09_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/av09_msgs_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -200,7 +202,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_av09.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_av09_msgs.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
