--- a/src/av09/CMakeLists.txt
+++ b/src/av09/CMakeLists.txt
@@ -10,7 +10,7 @@ project(av09)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
-  message_generation
+  #message_generation
 )
 
 ## System dependencies are found with CMake's conventions
